# thealgorithms-mcp

./: .gitignore  DESIGN.md  README.md  pyproject.toml  server.json
scripts/: search_probe.py  verify_language.py  verify_stdio.py
src/thealgorithms_mcp/: __init__.py  autocomplete.py  directory.py  discovery.py  fetch.py  http.py  index.py  parse.py  search.py  server.py
tests/: test_directory.py  test_parse.py  test_search.py
