[project]
name = "thealgorithms-mcp"
version = "0.1.1"
description = "MCP server for querying TheAlgorithms/Python — search algorithms and fetch implementations with their doctests as examples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "platformdirs>=4.0",
]

[project.scripts]
thealgorithms-mcp = "thealgorithms_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thealgorithms_mcp"]
